--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Player</title>
+    <title>Saints Radio</title>
     <style>
 * {
     margin: 0;
@@ -105,7 +105,7 @@ body, html {
     </div>
     <div class="info">
         <h1>Saints Radio</h1>
-        <p>The Church of Jesus Christ</p>
+        <p>The Church of Jesus Christ of Latter-day Saints</p>
     </div>
 
     <br>
